k8_configs/kibana_depl_serv.yaml
# Kibana service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.15.2
        ports:
        - containerPort: 5601
          name: http
        resources:
          limits:
            cpu: 500m
            memory: 1.5Gi
          requests:
            cpu: 100m
            memory: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: LoadBalancer
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
