k8_configs/mongo_depl_serv.yaml
# StatefulSet Code (not Deployment)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-stateful
  labels:
    app: mongodb
spec:
  serviceName: "mongodb-service"
  replicas: 1 # We usually don't want replicas of DataBases as they can create issues
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo # Pull the mongo docker image from Docker Hub
        ports:
        - containerPort: 27017 # This is default port of MongoDB
        volumeMounts: # Persistent Data
        - name: mongodb-data
          mountPath: /data/db # this is the directory inside the container where MongoDB stores data
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 256Mi # 256 MB storage

---
# Service file for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # Port of system
      targetPort: 27017 # Port of the docker image so it's binding ports as: -p 27017:27017
